RESOLVED FIXED181301
Array Storage operations sometimes did not update the indexing mask correctly.
https://bugs.webkit.org/show_bug.cgi?id=181301
Summary Array Storage operations sometimes did not update the indexing mask correctly.
Keith Miller
Reported 2018-01-04 12:45:30 PST
Array Storage operations sometimes did not update the indexing mask correctly.
Attachments
Patch (2.69 KB, patch)
2018-01-04 12:46 PST, Keith Miller
mark.lam: review+
Keith Miller
Comment 1 2018-01-04 12:46:16 PST
Mark Lam
Comment 2 2018-01-04 12:48:13 PST
Comment on attachment 330482 [details] Patch r=me
Saam Barati
Comment 3 2018-01-04 12:48:31 PST
Comment on attachment 330482 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=330482&action=review > Source/JavaScriptCore/ChangeLog:8 > + I will add tests in a follow up patch. please link to bug.
Keith Miller
Comment 4 2018-01-04 12:50:15 PST
Comment on attachment 330482 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=330482&action=review >> Source/JavaScriptCore/ChangeLog:8 >> + I will add tests in a follow up patch. > > please link to bug. Done. See: https://bugs.webkit.org/show_bug.cgi?id=181303
Keith Miller
Comment 5 2018-01-04 13:01:14 PST
Ahmad Saleem
Comment 6 2022-10-25 13:23:41 PDT
Landed - https://github.com/WebKit/WebKit/commit/ee1b1e38602e6f416fb646b36f3199e10660989f and didn't backed out. Marking this as "RESOLVED FIXED".
Note You need to log in before you can comment on or make changes to this bug.